# MiniG

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/app/: app.cpp  app.h  common.h  window.cpp  window.h
src/app/games/: TicTacToe.cpp  TicTacToe.h  game.h  snake.cpp  snake.h  tetris.cpp  tetris.h
src/app/gui/: layout.cpp  layout.h  layout_common.h  layout_game_selection.cpp  layout_main_menu.cpp
src/app/log/: log.cpp
src/app/resources/: image_loader.h  texture.cpp  texture.h
